--- a/W1D2/style.css
+++ b/W1D2/style.css
@@ -3,5 +3,14 @@ h1 {
     color: white;
 }
 body {
+    background-color: grey;
     
+}
+
+.red {
+    background-color: red;
+}
+
+#blue {
+    background-color: blue;
 }
