--- a/W1D2/ButtonUp.css
+++ b/W1D2/ButtonUp.css
@@ -1,4 +1,7 @@
+#btn-group{
+    margin: 10%;
 
+}
 #search{
     background-color: white;
     border-radius: 20px 20px 20px;
@@ -9,16 +12,28 @@
     font-size: 15px;
     width: 150px;
     height: 30px;
-    margin: 10%;
+    margin: 5px;
 }
 #plus{
     background-color: #0db;
     border-color: darkturquoise;
+    border: 10px;
     color: white;
     border-radius: 50%;
     width: 40px;
     height: 40px;
     font-size: 20px;
-
+    margin: 10px;
+    display: block;
 }
-    
+#createaccount{
+    background-color: #38e;
+    border-color: black;
+    color: white;
+    box-shadow: 10px;
+    width: 100px;
+    height: 25px;
+    font-size: 10px;
+    margin: 10px;
+    display: block;
+}
