--- a/W1D3/flecourblocks.css
+++ b/W1D3/flecourblocks.css
@@ -1,7 +1,8 @@
 .container{
     width: 950px;
     background-color: silver;
-    margin: 0px auto;
+    margin: 10px;
+    padding: 20px; 
 }
 .top-nav {
     height: 150px;
@@ -11,23 +12,36 @@
     height: 300px;
     width: 200px;
     background-color: blue;
+    margin-right: -175px;
+    margin-left: 0px;
+    margin-top: -80px;
+    padding: 10px;
 }
 .main {
     height: 400px;
     width: 700px;
     background-color: red;
+    margin-left: 200px;
+    margin-top: 20px;
+    padding: 10px;
 }
 .sub-content {
     height: 200px;
     width: 210px;
     background-color: yellow;
+    margin: 10px;
 }
 #advertisement {
     height: 120px;
     width: 660px;
+    margin-left: 10px;
+    margin-right: 50px;
+    margin-top: 20px;
+    padding: 5px;
     background-color: purple;
 }
 .row {
-    /* TODO - what should go here? */
+    display: flex;
+    align-items: center;
 }
 
