--- a/W1D3/GitHubBlocks.css
+++ b/W1D3/GitHubBlocks.css
@@ -1,31 +1,23 @@
-.catblocks {
-    width: 1000px;
-    height: 1000px;
-    margin: 10px;
-    padding: 5px;
-    border: 10px;
-    border-color: blue;
-    background-color: lightgrey;
-    display:inline-block
-
-}
-.catblocks-1{
-    background-color: lightskyblue;
-    padding: 10px;
+container{
     width: 900px;
-    height: 200px;
-    margin: 0px;
-}
-
-.catblock-2 {
-    background-color: lightcoral;
-    width: 900px;
-    height: 200px;
-    padding: 10px;
-}
-
-.catblock-3 {
+    margin: 0 auto;
     background-color: white;
-    width: 900px;
+
+}
+.catblock-1{
+    display: flex;
+    justify-content: space-evenly;
+    background-color: lightgreen;
+
+}
+
+.catblock-2{
+    background-color: lightcoral;
+}
+
+.catblock{
+    background-color: magenta;
+}
+img.octocat {
     height: 200px;
 }
