--- a/Profile Page/ProfilePage.css
+++ b/Profile Page/ProfilePage.css
@@ -1,11 +1,12 @@
 body{
     width: 900px;
     height: 1200px;
+    font-family:     font-family: 'Roboto', sans-serif;;
 }
 .container{
     width: 1300px;
     height: 1400px;
-    background-color: grey;
+    background-color: white;
 }
 .nav{
     width: 1300px;
@@ -14,7 +15,6 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    font-family: 'Roboto', sans-serif;
 }
 .nav a{
     color: white;
@@ -45,7 +45,9 @@ body{
 }
 
 .user-circle1{
-    height: 100px;
+    height: 120px;
+    margin-top: 70px;
+    margin-left: 50px;
 }
 .user-circle2{
     height: 20px;
@@ -67,15 +69,45 @@ button{
     width: 650px;
     height: 500px;
     background-color: white;
-    margin-left: 100px;
-    margin-top: 50px;
+    margin-left: 200px;
+    margin-top: 40px;
+    padding: -1;
+    border: 4px solid grey;
 }
 .header1{
-    width: 650px;
-    height: 150px;
+    width: 657px;
+    height: 140px;
+    margin: -3px;
     background-color: #18a2b8;
 }
 .information{
     width: 400px;
     height: 200px;
+    margin-left: 50px;
+    margin-top: 50px;
+}
+.map-marker{
+    height: 25px;
+}
+.gear{
+    height: 25px;
+}
+h2, h3, p{
+    margin: 0px;
+}
+h1{
+    font-size: 40px;
+    margin-bottom: 10px;
+    
+}
+h3{
+    margin-top: 70px;
+    font-size: 20px;
+}
+.i{
+    font-size: 160%;
+    margin-top: 10px;
+}
+.seattle{
+    margin-bottom: 20px;
 }
