--- a/Profile Page/ProfilePage.css
+++ b/Profile Page/ProfilePage.css
@@ -1,15 +1,18 @@
-body{
-    width: 900px;
-    height: 1200px;
-    font-family:     font-family: 'Roboto', sans-serif;;
+*{
+    padding: 0px;
+    margin: 0px;
+    font-family: 'Roboto', sans-serif;
 }
 .container{
-    width: 1300px;
-    height: 1400px;
-    background-color: white;
+    width: 1500px;
+    height: 1000px;
+    display: flex;
 }
+
+
+/*Navigation*/
 .nav{
-    width: 1300px;
+    width: 1500px;
     height: 100px;
     background-color: black;
     display: flex;
@@ -26,28 +29,60 @@ body{
     align-items: center;
     justify-content: space-around;
     list-style-type: none;
-    margin-right: 150px;
-    font-size: 25px;
+    margin-right: 80px;
+    font-size: 20px;
 }
 .nav-title{
     color: white;
-    margin-left: 100px;
-    font-size: 50px;
+    margin-left: 200px;
+    margin-bottom: 20px;
+    font-size: 35px;
+    align-items: center;
 }
-
 .btn{
     height: 40px;
     width: 140px;
     background-color: #14a3b8;
     font-size: 25px;
     color: white;
-    margin-left: 200px;
+    margin-left: 300px;
+}
+
+/* About Me*/
+
+.col-1{
+    width: 650px;
+    height: 500px;
+    background-color: silver;
+}
+.header-1{
+    width: 657px;
+    height: 140px;
+    margin: -3px;
+    background-color: #18a2b8;
 }
 
 .user-circle1{
     height: 120px;
     margin-top: 70px;
     margin-left: 50px;
+}
+.info-1{
+    width: 400px;
+    height: 200px;
+    margin-left: 50px;
+    margin-top: 50px;
+}
+
+.map-marker, .gear{
+    height: 20px;
+}
+/* Connection Requests*/
+.col-2{
+    height: 200px;
+    width: 250px;
+    background-color: silver;
+
 }
 .user-circle2{
     height: 20px;
@@ -57,57 +92,28 @@ button{
     width: 40px;
 }
 
-.no{
+.no, .yes{
     height: 30px;
     width: 30px;
 }
-.yes{
-    height: 30px;
-    width: 30px;
-}
-.aboutme{
+
+/* Education*/
+.col-3{
     width: 650px;
-    height: 500px;
-    background-color: white;
-    margin-left: 200px;
-    margin-top: 40px;
-    padding: -1;
-    border: 4px solid grey;
+    height: 250px;
+    background-color: silver;
+
 }
-.header1{
-    width: 657px;
-    height: 140px;
-    margin: -3px;
-    background-color: #18a2b8;
+.header-{
+    width: 650px;
+    height: 40px;
+    background-color: darkgray;
 }
-.information{
-    width: 400px;
-    height: 200px;
-    margin-left: 50px;
-    margin-top: 50px;
-}
-.map-marker{
-    height: 25px;
-}
-.gear{
-    height: 25px;
-}
-h2, h3, p{
-    margin: 0px;
-}
-h1{
-    font-size: 40px;
-    margin-bottom: 10px;
-    
-}
-h3{
-    margin-top: 70px;
-    font-size: 20px;
-}
-.i{
-    font-size: 160%;
-    margin-top: 10px;
-}
-.seattle{
-    margin-bottom: 20px;
+
+
+/* Your Connections*/
+.col-4{
+    height: 250px;
+    width: 250px;
+    background-color: silver;
 }
