--- a/Profile Page/ProfilePage.css
+++ b/Profile Page/ProfilePage.css
@@ -114,12 +114,12 @@
     margin-right: 20px;
 }
 
-button{
-    height: 40px;
-    width: 30px;
+.numbercircle{
+    background-color: red;
+    border-radius: 10px;
+    height: 20px;
+    padding: 0 10px;
 }
-
-
 /* Education*/
 .col-3{
     width: 650px;
