--- a/Button Clicker/ButtonClicker.css
+++ b/Button Clicker/ButtonClicker.css
@@ -1,6 +1,10 @@
 *{
-    margin: 0x;
+    margin: 0 autox;
     padding: 0px;
+    font-family: 'Courier New', Courier, monospace;
+}
+body{
+    margin-left: 100px;
 }
 /* Navigation */
 .navigation{
@@ -12,10 +16,60 @@
     justify-content: space-between;
 }
 .nav-title{
-    font-size: 50px;
+    font-size: 45px;
+    font-weight: bold;
+    margin-left: 30px;
 }
 .search-bar{
     width: 400px;
-    height: 30px;
+    height: 35px;
     background-color: white;
+    color: lightgray;
+    font-size: 20px;
+    display: flex;
+    align-items: center;
+    border: 3px solid black;
+    
+}
+.button-1{
+    width: 100px;
+    height: 35px;
+    background-color: royalblue;
+    color: white;
+    box-shadow: 5px 5px black;
+    margin-right: 40px;
+    font-size: 25px;
+}
+
+.container{
+    width: 1200px;
+    height: 1500px;
+    display: flex;
+    margin-top: 30px;
+    justify-content: space-between;
+}
+.block-1, .block-2{
+    width: 740px;
+    height: 250px;
+    border: 3px solid black;
+    padding: 30px;
+    display: flex;
+    margin-bottom: 30px;
+}
+.ninja-1{
+    width: 200px;
+    height: 240px;
+    background-color: grey;
+}
+.ninja-2{
+    width: 350px;
+    height: 200px;
+    background-color: lightgray;
+}
+.ninja-3{
+    width: 300px;
+    height: 200px;
+    border: 3px solid black;
+    background-color: lightgrey;
+    padding: 30px;
 }
