--- a/Button Clicker/ButtonClicker.css
+++ b/Button Clicker/ButtonClicker.css
@@ -6,7 +6,6 @@
 body{
     margin-left: 100px;
 }
-/* Navigation */
 .navigation{
     width: 1200px;
     height: 100px;
@@ -40,7 +39,25 @@ body{
     margin-right: 40px;
     font-size: 25px;
 }
-
+.button-2{
+    width: 100px;
+    height: 35px;
+    background-color: royalblue;
+    color: white;
+    box-shadow: 5px 5px black;
+    font-size: 15px;
+    font-weight: bold;
+}
+.button-3{
+    width: 250px;
+    height: 50px;
+    background-color: royalblue;
+    color: white;
+    box-shadow: 5px 5px black;
+    margin-right: 40px;
+    font-size: 20px;
+    font-weight: bold;
+}
 .container{
     width: 1200px;
     height: 1500px;
@@ -59,17 +76,28 @@ body{
 .ninja-1{
     width: 200px;
     height: 240px;
-    background-color: grey;
+    background-color: white;
+    text-align: center;
 }
 .ninja-2{
-    width: 350px;
+    width: 400px;
     height: 200px;
-    background-color: lightgray;
+    background-color: white;
+    margin-top: 50px;
+    margin-left: 30px;
+    font-size: 20px;
+    font-weight: bold;
 }
 .ninja-3{
-    width: 300px;
+    width: 320px;
     height: 200px;
     border: 3px solid black;
     background-color: lightgrey;
-    padding: 30px;
+    font-size: 30px;
+    font-weight: bold;
+    padding-left: 30px;
+    margin: 0px;;
+}
+p{
+    margin: 5px;
 }
