--- a/Liking Likes/LikingLikes.css
+++ b/Liking Likes/LikingLikes.css
@@ -1,7 +1,28 @@
 button{
     color: white;
-    width: 40px;
+    width: 50px;
     height: 20px;
-    box-shadow: 5px solid black;
+    box-shadow: 5px 5px black;
     background-color: palevioletred;
+    margin-left: 20px;
+}
+.container{
+    width: 350px;
+    height: 100px;
+    border: 5px solid black;
+    background-color: white;
+    padding: 10px;
+}
+.counter{
+    display: flex;
+    justify-content: space-evenly;
+    margin-right: 10px;
+}
+.row-1{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.someuser{
+    font-size: 25px;
 }
